<resources>
    <string name="app_name">Join To-Do</string>

    // NoteListActivity text
    <string name="search_bar">Поиск дел</string>
    <string name="notification_disabled">Уведомление отключено</string>
    <string name="back_info">Здесь будет ваш список.</string>


    //SettingsActivity text
    <string name="settingsActivity">Настройки</string>
    <string name="date">25/08/2021</string>
    <string name="time">Время</string>
    <string name="complite">Готово</string>
    <string name="cancel">Отменить</string>
    <string name="search_hint">Поиск дела</string>
    <string name="no_search_result">Нет результатов</string>


    //menu
    <string name="delete_all_notes">Удалить завершенные</string>
    <string name="hide_checked_notes">Скрыть завершенные</string>
    <string name="search">Поиск</string>
    <string name="search_note">Поиск дел</string>
    <string name="sort">Сортировка</string>
    <string name="sort_by_name">Сортировка по имени</string>
    <string name="sort_by_date">Сортировка по дате</string>
    <string name="pls_enter_comment">Введите ваш коментарий</string>
    <string name="comment">Комментарий</string>
    <string name="enter_head">Введите заголовок дела</string>
    <string name="head">Заголовок</string>
    <string name="enter_date">Выберите дату</string>
    <string name="notification">Напоминание</string>
    <string name="about_application">О программе</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="text_size_header">Настройки текста</string>
    <string name="sync_header">Sync</string>

    <!-- Text Size Preferences -->
    <string name="text_size">Размер текста</string>
    <string name="text_style">Стиль текста</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>