<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.newNoteActivity.NewNoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNewNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/title"
        style="@style/NewNoteActivityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarNewNote"
        android:layout_marginStart="7dp"
        android:padding="5dp"
        android:text="@string/head" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textNotesTitle"
        style="@style/NewNoteActivityText.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:hint="@string/enter_head" />


    <TextView
        android:id="@+id/commentText"
        style="@style/NewNoteActivityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNotesTitle"
        android:layout_marginStart="7dp"
        android:padding="5dp"
        android:text="@string/comment" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/noteText"
        style="@style/NewNoteActivityText.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/commentText"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:hint="@string/pls_enter_comment" />

    <RelativeLayout
        android:id="@+id/linearDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearNotification"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/corner_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="3dp"
        android:paddingBottom="3dp">

        <ImageView
            android:id="@+id/imageCalendar"
            style="@style/IconColorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_calendar" />

        <TextView
            style="@style/DataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/imageCalendar"
            android:text="@string/enter_date" />

        <Button
            android:id="@+id/buttonDate"
            style="@style/DataButtonView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:text="29.05.2021" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearNotification"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/corner_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="3dp"
        android:paddingBottom="3dp">

        <ImageView
            android:id="@+id/imageNotification"
            style="@style/IconColorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_alarm" />

        <TextView
            style="@style/DataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/imageNotification"
            android:text="@string/notification" />

        <Button
            android:id="@+id/buttonNotification"
            style="@style/DataButtonView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/time" />

    </RelativeLayout>

</RelativeLayout>